lease enter the commit message for your changes. Lines starting

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "fireapp",
-    "slug": "https://auth.expo.io/@bharath-kanth/fireapp",
+    "slug": "fireapp",
     "scheme": "fireapp",
     "version": "1.0.0",
     "orientation": "portrait",
